tests/test_io/bad/using_non_output.catala_en
# Test

```catala
declaration scope A:
  internal a content integer

declaration scope B:
  a scope A

scope A:
  definition a equals 0

scope B:
  assertion a.a = 0
```